Css fixes: always show the scrollbar. Fixed vert align of header

--- a/templates/css/reader.css
+++ b/templates/css/reader.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 .container {
 }
 
@@ -8,7 +12,7 @@
 #title>h1 {
     float: right;
     font-size: 4em;
-    padding-top: 176px;
+    padding-top: 175px;
     padding-right: 10px;
     margin: 0px;
 }
